--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>misa</title>
-<link rel="stylesheet" type="text/css" href="css/img.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<title>MISA</title>
+<meta name="keywords" content="イラスト, サブカルチャー, デザインフェスタ, デザフェス, design festa, itemissaest, ネオロココ, ネオロココバイブル, 原宿, misa, misaaccount, モー, mow, holybible">
+
+
+<style type="text/css"><!--
+
+a:link {color: #666666;}
+body,td,th {color: #aaaaaa;
+		font-family: メイリオ,ＭＳ Ｐゴシック, ヒラギノ角ゴ Pro W3,Arial,Sans-serif,Century Gothic,Verdana}
+body {margin-top: 0px;	font-size: 80%;}
+
+.x-small {font-size: x-small}
+
+--></style>
+
+
+<script type="text/JavaScript">
+<!--
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+//-->
+</script>
 </head>
-<body>
-<h1>test</h1>
-</body>
-</html>
+
+
+<body onload="MM_preloadImages('img/enterbutton.gif')">
+<p><a href="https://twitter.com/misaaccount" target="_top">
+<img src="img/follow_bird_us-a.png" alt="img" naturalsizeflag="3" align="bottom" height="36" width="100" border="0"></a></p>
+<div align="center">
+<h1>MISA</h1>
+</div>
+<p style="letter-spacing:0.2em; line-height:1.5em" align="center"><font color="#bbbbbb">Welcome to<br>
+http://www.biblemisa.html.xdomain.jp</font></p>
+<table align="center" width="800" border="0" cellpadding="0" cellspacing="10">
+<tbody><tr>
+<td colspan="2" style="background:url(img/topimg.gif) no-repeat center
+" height="650"><center>
+</center>
+</td>
+</tr>
+<tr>
+  <td width="650"><div align="center"><a href="http://ameblo.jp/itemissaest/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('JP','','img/enterbutton.gif',1)"><img src="img/enterbutton.gif" alt="" name="JP" id="JP" japanese="japanese" height="40" width="115" border="0"></a></div></td>
+</tr>
+</tbody></table>
+
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center"><font size="-2">Copyright   2014-2015 (C) MISA <br>
+All rights reserved. Images from this website may not be reproduced.<br>
+本ウェブサイト内の画像、文章等の無断転用を固く禁じます。
+  </font>
+</p>
+
+
+
+
+</body></html>
